--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^4.3.0",
-    "jest": "^26.6.0"
+    "jest": "^26.6.0",
+    "pre-commit": "^1.2.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test"
-    }
-  }
+  "pre-commit": [
+    "test"
+  ]
 }
